# face_tagger

./: .gitignore  pyproject.toml
face_tagger/: processor.py  recognizer.py  video.py
tests/: test_face_tagger.py
