[tool.poetry]
name = "face_tagger"
version = "0.1.0"
description = ""
authors = ["Mahyar Mahdavi <Mahyar@Mahyar24.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
rich = "^12.4.4"
face-recognition = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.13.9"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
